[package]
name = "rustkit"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
prometheus = "0.13"
log = "0.4"
env_logger = "0.9"
futures = "0.3"

[[bin]]
name = "http_service"
path = "cmd/cmd.rs"